--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 </div>
 
 <script>
-const APP_KEY = 'YOUR_DROPBOX_APP_KEY'; // Replace with your Dropbox App Key
-const REDIRECT_URI = 'https://your-username.github.io/your-repository/'; // Your GitHub Pages URL
+const APP_KEY = 'ipbo4qv1qixnu10'; // Replace with your Dropbox App Key
+const REDIRECT_URI = 'https://github.com/Habitatchannel/Dropboxzip/'; // Your GitHub Pages URL
 
 let dbx;
 
