--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <script>
 const APP_KEY = 'ipbo4qv1qixnu10'; // Replace with your Dropbox App Key
-const REDIRECT_URI = 'https://github.com/Habitatchannel/Dropboxzip/'; // Your GitHub Pages URL
+const REDIRECT_URI = 'https://habitatchannel.github.io/Dropboxzip/'; // Your GitHub Pages URL
 
 let dbx;
 
