--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 
 <script>
-const APP_KEY = 'ipbo4qv1qixnu10'; // Replace with your Dropbox App Key
+const APP_KEY = '47gkdqrpg4fhe91'; // Replace with your Dropbox App Key
 const REDIRECT_URI = 'https://habitatchannel.github.io/Dropboxzip/'; // Your GitHub Pages URL
 
 let dbx;
