--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Create Folders in Dropbox</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/9.0.1/Dropbox-sdk.min.js"></script>
+<script src="https://unpkg.com/dropbox/dist/Dropbox-sdk.min.js"></script>
 <style>
     .folder-input {
         display: flex;
